Make roll() return a question (or null)